app/deploy/app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kad
spec:
  selector:
    app: kad
  ports:
  - protocol: TCP
    targetPort: 5000
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kad
  template:
    metadata:
      labels:
        app: kad
      annotations:
        prometheus.io/scrape: "pod"
    spec:
      containers:
      - name: app
        image: prgcont/pycont-app:0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config
          mountPath: /etc/kad/
      volumes:
      - name: config
        configMap:
          name: kad
          items:
          - key: config.yml
            path: config.yml
