app/deploy/redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: redis
        image: redis
        resources:
          limits:
            memory: 128Mi
        ports:
        - containerPort: 6379
