app/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kad
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kad
          servicePort: 80
